crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/member_error_definition/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.4'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/member_error_definition/input.sol:3:3]
   │
 3 │   error Error1();
   │   ───────┬───────  
   │          ╰───────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 117..125,
                    },
                    name: Identifier {
                        range: 126..132,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [],
                    },
                    open_brace: OpenBrace {
                        range: 133..134,
                    },
                    members: ContractMembers {
                        elements: [
                            ErrorDefinition(
                                ErrorDefinitionStruct {
                                    error_keyword: ErrorKeyword {
                                        range: 137..142,
                                    },
                                    name: Identifier {
                                        range: 143..149,
                                    },
                                    members: ErrorParametersDeclarationStruct {
                                        open_paren: OpenParen {
                                            range: 149..150,
                                        },
                                        parameters: ErrorParameters {
                                            elements: [],
                                        },
                                        close_paren: CloseParen {
                                            range: 150..151,
                                        },
                                    },
                                    semicolon: Semicolon {
                                        range: 151..152,
                                    },
                                },
                            ),
                        ],
                    },
                    close_brace: CloseBrace {
                        range: 153..154,
                    },
                },
            ),
        ],
    },
}
